@@ -6,6 +6,7 @@ Version 1.1rc to be released
 ----------------------------
 - Bug #713: webapp command generates incorrect test bootstrap script (Qiang)
 - Enh #666: Added support for auto-flushing log messages (Qiang)
+- Enh #668: Nested forms generated by CForm will render attributes in the fieldset tag (Qiang)
 - Enh #695: Upgraded HTML Purifier to 4.0.0 (Qiang)
 - Enh #711: Added CWebUser::autoRenewCookie to support automatically renew cookie-based login (Qiang)
 - Enh: Added CSS class for links generated by CSort to differentiate sorting directions (Qiang)
